--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "Nuevo Monit",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "192x192",
+      "src": "favicon.png",
+      "sizes": "144x144",
       "type": "image/png"
     }
   ],
