--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^13.0.6",
     "react-dom": "^16.0.0",
+    "react-highcharts": "^15.0.0",
     "react-router-dom": "^4.2.2",
     "react-swipeable-views": "^0.12.8",
     "recharts": "^1.0.0-apha.5"
