--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "amazon-cognito-identity-js": "^1.21.0",
     "classnames": "^2.2.5",
+    "highcharts-exporting": "^0.1.7",
+    "highcharts-more": "^0.1.7",
     "lodash": "^4.17.4",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.15",
