--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.2.0",
     "react-highcharts": "^15.0.0",
     "react-moment-proptypes": "^1.5.0",
+    "react-popper": "^0.7.5",
     "react-router-dom": "^4.2.2",
     "react-swipeable-views": "^0.12.8",
     "recharts": "^1.0.0-apha.5",
